--- a/index.css
+++ b/index.css
@@ -109,7 +109,7 @@
 body {
   background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
     url("https://earthsky.org/upl/2019/07/TRAPPIST-1-exoplanets-illustration-Jan-24-2018-800x450.jpg");
-
+  background-image: url("https://github.com/wariirilabs/waririlabs/blob/main/lightning.jpeg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
